<resources>
    <string name="app_name">Awesome Graph App</string>
    <string name="action_settings">Settings</string>
    <string name="button_stop">Stop</string>
    <string name="button_start">Run</string>
    <string name="button_pause">Pause</string>
    <string name="patient_id">Patient ID</string>
    <string name="patient_age">Age</string>
    <string name="patient_name">Patient Name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="graph_status_resumed">Graph is resumed</string>
    <string name="graph_status_paused">Graph is paused</string>
    <string name="graph_status_init">Click on \"Run\" button to start the graph</string>
    <string name="graph_status_running">Graph is running</string>
</resources>
