<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="edu.asu.mc.assignment1.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <!--<TextView
            android:id="@+id/patient"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="Patient ID" />-->
        <!-- Patient ID -->
        <EditText android:id="@+id/patient_id"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/patient_id"
            android:textSize="@dimen/field_size"
            android:inputType="textCapCharacters"/>
        <!-- Patient age -->
        <EditText android:id="@+id/patient_age"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/patient_age"
            android:textSize="@dimen/field_size"
            android:inputType="number"/>
    </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText android:id="@+id/patient_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/patient_name"
            android:textSize="@dimen/field_size"
            android:inputType="textCapWords"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <Button
            android:id="@+id/button_start"
            android:text="@string/button_start"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
        <Button
            android:id="@+id/button_stop"
            android:text="@string/button_stop"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="false" />
    </LinearLayout>
<!--
    <LinearLayout
        android:id="@+id/text_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" />-->

    <LinearLayout
        android:id="@+id/graph_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/activity_horizontal_margin"/>
</LinearLayout>
